--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/passport": "^10.4",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.0",
+        "league/flysystem-aws-s3-v3": "^1.0",
         "vimeo/laravel": "^5.7",
         "yajra/laravel-datatables-oracle": "^9.0"
     },
