--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.0",
         "league/flysystem-aws-s3-v3": "^1.0",
+        "spatie/laravel-permission": "^5.5",
         "vimeo/laravel": "^5.7",
         "yajra/laravel-datatables-oracle": "^9.0"
     },
